--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <title>zzzzz HTML</title>
 </head>
 <body>
-  
+  <h1>Informacion personal</h1>
+  <button id="btnObtenerDatos">Obtener Datos Académicos</button>
+  <div id="datosAcademicos"></div>
+  <script src="js/script.js"></script>
 </body>
 </html>
