--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <h1>Informacion personal</h1>
   <button id="btnObtenerDatos">Obtener Datos Académicos</button>
   <div id="datosAcademicos"></div>
-  <script src="js/script.js"></script>
+  <script src="/js/script.js"></script>
 </body>
 </html>
