ejecutar desde app.js

--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
 </head>
 <body>
   <h1>Informacion personal</h1>
-  <button id="btnObtenerDatos">Obtener Datos Académicos</button>
-  <div id="datosAcademicos"></div>
+  <h1>Quien soy?</h1>
+  <button id="btnObtenerDatosPerso">Datos Personales</button>
+  <button id="btnObtenerDatos">Datos Académicos</button>
+  <button id="btnObtenerDatosLabo">Datos Laborales</button>
+  <div id="datos"></div>
   <script src="/js/script.js"></script>
 </body>
 </html>
