--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <button id="btnObtenerDatos">Datos Académicos</button>
   <button id="btnObtenerDatosLabo">Datos Laborales</button>
   <div id="datos"></div>
+  <div id="datos2" class="contenedor"></div>
   <script src="/js/script.js"></script>
 </body>
 </html>
